# projekt-1-Kafel1997

./: CMakeLists.txt  README.md
include/: Firma.hpp  Gra.hpp  Kredyt.hpp  Pracownik.hpp  RandomNameGenerator.hpp
src/: main.cpp
